# PrimAITE

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _config.yml  api.html  copyright_clause_pre_commit_hook.py  example_config.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  run_test_and_coverage.py  sandbox.ipynb  sandbox.py  scratch.py  search.html  searchindex.js  setup.cfg  setup.py
.azure/: .pypirc  artifact-release-pipeline.yaml  azure-benchmark-pipeline.yaml  azure-build-deploy-docs-pipeline.yml  azure-ci-build-pipeline.yaml
.azuredevops/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-sphinx.yml  python-package.yml
PRIMAITE/: Main.py
PRIMAITE/acl/: access_control_list.py  acl_rule.py
PRIMAITE/common/: __init__.py  config_values_main.py  enums.py  service.py
PRIMAITE/config/: config_1_DDOS_BASIC.yaml  config_2_DDOS_BASIC.yaml  config_UNIT_TEST.yaml  config_main.yaml
PRIMAITE/environment/: __init__.py  primaite.py  reward.py
PRIMAITE/links/: link.py
PRIMAITE/nodes/: active_node.py  node.py  node_state_instruction.py  node_state_instruction_green.py  passive_node.py  service_node.py
PRIMAITE/pol/: green_pol.py  red_agent_pol.py
PRIMAITE/tests/: test_acl.py
PRIMAITE/transactions/: transaction.py  transactions_to_file.py
_modules/: index.html  primaite.html
_modules/primaite/: cli.html  data_viz.html  exceptions.html  main.html  notebooks.html  primaite_session.html
_modules/tests/: conftest.html  test_acl.html  test_active_node.html  test_full_legacy_config_session.html  test_lay_down_config.html  test_observation_space.html  test_primaite_session.html  test_red_random_agent_behaviour.html  test_resetting_node.html  test_reward.html  test_seeding_and_deterministic_session.html  test_service_node.html  test_session_loading.html  test_single_action_space.html  test_train_eval_episode_steps.html  test_training_config.html
_sources/source/: about.rst.txt  custom_agent.rst.txt  dependencies.rst.txt  glossary.rst.txt  primaite-dependencies.rst.txt  primaite_session.rst.txt
benchmark/: benchmark.py  primaite_benchmark.py  report.py  utils.py
benchmark/config/: benchmark_training_config.yaml
benchmark/static/: styles.css
benchmark/utils/: benchmark.py  report.py
diagram/: classes.puml
docs/: Makefile  api.rst  build-sphinx-docs-to-github-pages.sh  conf.py  index.rst  make.bat
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/source/: about.rst  action_masking.rst  action_system.rst  config(v2).rst  config(v3).rst  config.rst  custom_agent.rst  customising_scenarios.rst  dependencies.rst  developer_tools.rst  environment.rst  example_notebooks.rst  executed_notebooks.rst  game_layer.rst  getting_started.rst  glossary.rst  high_level_project_structure.rst  how_to.rst  migration_1.2_-_2.0.rst  node_sets.rst  primaite-dependencies.rst  primaite_session.rst  request_system.rst  results.rst  rewards.rst  session.rst  simulation.rst  simulation_structure.rst  state_system.rst  varying_config_files.rst
notebooks/: test.ipynb
source/: about.html  config.html  custom_agent.html  dependencies.html  getting_started.html  glossary.html  migration_1.2_-_2.0.html  primaite-dependencies.html  primaite_session.html
source/_autosummary/: primaite.acl.access_control_list.AccessControlList.html  primaite.acl.access_control_list.html  primaite.acl.acl_rule.ACLRule.html  primaite.acl.acl_rule.html  primaite.acl.html  primaite.agents.agent_abc.AgentSessionABC.html  primaite.agents.agent_abc.get_session_path.html  primaite.agents.agent_abc.html  primaite.agents.hardcoded_abc.HardCodedAgentSessionABC.html  primaite.agents.hardcoded_abc.html  primaite.agents.hardcoded_acl.HardCodedACLAgent.html  primaite.agents.hardcoded_acl.html  primaite.agents.hardcoded_node.HardCodedNodeAgent.html  primaite.agents.hardcoded_node.html  primaite.agents.html  primaite.agents.rllib.RLlibAgent.html  primaite.agents.rllib.html  primaite.agents.sb3.SB3Agent.html  primaite.agents.sb3.html  primaite.agents.simple.DoNothingACLAgent.html  primaite.agents.simple.DoNothingNodeAgent.html  primaite.agents.simple.DummyAgent.html  primaite.agents.simple.RandomAgent.html  primaite.agents.simple.html  primaite.agents.utils.convert_to_new_obs.html  primaite.agents.utils.convert_to_old_obs.html  primaite.agents.utils.describe_obs_change.html  primaite.agents.utils.get_new_action.html  primaite.agents.utils.get_node_of_ip.html  primaite.agents.utils.html  primaite.agents.utils.is_valid_acl_action.html  primaite.agents.utils.is_valid_acl_action_extra.html  primaite.agents.utils.is_valid_node_action.html  primaite.agents.utils.transform_action_acl_enum.html  primaite.agents.utils.transform_action_acl_readable.html  primaite.agents.utils.transform_action_node_enum.html  primaite.agents.utils.transform_action_node_readable.html  primaite.agents.utils.transform_change_obs_readable.html  primaite.agents.utils.transform_obs_readable.html  primaite.cli.build_dirs.html  (+196 more)
src/primaite/: VERSION  __init__.py  cli.py  exceptions.py  main.py  primaite_session.py
tests/: __init__.py  conftest.py  test_acl.py  test_active_node.py  test_full_legacy_config_session.py  test_lay_down_config.py  test_observation_space.py  test_primaite_session.py  test_red_random_agent_behaviour.py  test_resetting_node.py  test_reward.py  test_rllib_agent.py  test_seeding_and_deterministic_session.py  test_service_node.py  test_session_loading.py  test_single_action_space.py  test_train_eval_episode_steps.py  test_training_config.py
tests/config/: box_obs_space_laydown_config.yaml  multidiscrete_obs_space_laydown_config.yaml  one_node_states_on_off_lay_down_config.yaml  one_node_states_on_off_main_config.yaml  ppo_not_seeded_training_config.yaml  ppo_seeded_training_config.yaml  random_agent_main_config.yaml  single_action_space_fixed_blue_actions_main_config.yaml  single_action_space_lay_down_config.yaml  (+6 more)
(+984 files in other folders)
